# proof-of-stake

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.sh
docs/: COMPILE_NOTES.md  NETWORKING.md  api.md  architecture.md  consensus.md  development.md  validator.md
examples/: basic_usage.rs  network_example.rs
src/: lib.rs
src/config/: mod.rs
src/consensus/: attestation.rs  engine.rs  fork_choice.rs  mod.rs  proposer_selection.rs  slashing.rs
src/crypto/: hash.rs  keys.rs  merkle.rs  mod.rs  signatures.rs
src/network/: config.rs  events.rs  messages.rs  mod.rs  peer.rs
src/storage/: mod.rs
src/types/: account.rs  block.rs  consensus.rs  mod.rs  transaction.rs  validator.rs
src/validator/: mod.rs
tests/: integration_tests.rs
